# cryptodesk-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 47f0028ca530_initial_tables.py
app/: config.py  database.py  dependencies.py  main.py
app/modules/assets/: models.py  router.py  schemas.py  service.py
app/modules/auth/: models.py  router.py  schemas.py  service.py
app/modules/users/: models.py  router.py  schemas.py  service.py
app/modules/watchlist/: models.py  router.py  schemas.py  service.py
app/utils/: cache.py  logger.py  security.py
web/: package-lock.json  package.json
web/src/app/: layout.js  page.js
web/src/app/dashboard/: page.js
web/src/app/login/: page.js
web/src/app/register/: page.js
web/src/lib/: api.js
